# bevy_tiles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yaml  release.yaml
crates/bevy_tiles/: Cargo.toml  README.md
crates/bevy_tiles/examples/: README.md  basic_2d.rs  basic_3d.rs  logo.rs  spatial.rs
crates/bevy_tiles/src/: chunks.rs  commands.rs  coords.rs  lib.rs  maps.rs  queries.rs  tiles.rs  utils.rs
crates/bevy_tiles/src/chunks/: chunk_query.rs
crates/bevy_tiles/src/commands/: chunk_batch.rs  chunk_single.rs  map.rs  tile_batch.rs  tile_single.rs
crates/bevy_tiles/src/tiles/: tile_query.rs
crates/bevy_tiles_2d_render/: Cargo.toml
crates/bevy_tiles_2d_render/src/: lib.rs
crates/bevy_tiles_ecs/: Cargo.toml
crates/bevy_tiles_ecs/examples/: basic_2d.rs  basic_3d.rs  logo.rs  spatial.rs
crates/bevy_tiles_ecs/src/: commands.rs  entity_tile.rs  lib.rs  tiles.rs
crates/bevy_tiles_ecs/src/commands/: chunk_batch.rs  chunk_single.rs  tile_batch.rs  tile_single.rs
crates/bevy_tiles_render/: Cargo.toml  README.md
crates/bevy_tiles_render/examples/: hello_tile.rs
crates/bevy_tiles_render/src/: bindings.rs  cleanup.rs  draw.rs  extract.rs  lib.rs  pipeline.rs  prepare.rs  queue.rs  tiles.rs
crates/bevy_tiles_render/src/buffer_helpers/: gpu_storage_buffer.rs  mod.rs
crates/bevy_tiles_render/src/chunk/: internal.rs  mod.rs
crates/bevy_tiles_render/src/maps/: internal.rs  mod.rs
crates/bevy_tiles_render/src/shaders/: tiles_frag.wgsl  tiles_vert.wgsl
