[workspace]
resolver = "2"
members=[
    "crates/bevy_tiles",
]

[workspace.package]
version = "0.0.0-dev3"
edition = "2021"
authors = ["James Bell <jamescarterbell@gmail.com>"]
license = "MIT"
license-file = "LICENSE-MIT"
repository = "https://github.com/OxidizedGames/bevy_tiles"
homepage = "https://github.com/OxidizedGames/bevy_tiles"

[workspace.profile.dev]
opt-level = 1

[workspace.profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = {version = "0.13.0", default-features = false}
rstest = "0.18.2"
bimap = "0.6.3"
rand = "0.8.5"
crossbeam = "0.8.3"
dashmap = "5.5.3"

[workspace.lints.clippy]
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
all = "deny"

[workspace.lints.rust]
unused_imports = "warn"