[workspace]
resolver = "2"
members=[
    "crates/bevy_tiles", "crates/bevy_tiles_ecs",
]

[workspace.package]
version = "0.0.0-dev3"
edition = "2021"
authors = ["James Bell <jamescarterbell@gmail.com>"]
license = "MIT"
license-file = "LICENSE-MIT"
repository = "https://github.com/OxidizedGames/bevy_tiles"
homepage = "https://github.com/OxidizedGames/bevy_tiles"

[workspace.profile.dev]
opt-level = 1

[workspace.profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
bevy_tiles = { path = "crates/bevy_tiles" }
rstest = "0.18.2"

[workspace.lints.clippy]
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_imports = "warn"
