[package]
name = "bevy_tiles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy library for working with entities in grids."

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
aery = {workspace = true}
bevy = {workspace = true}
bimap = "0.6.3"

[dev-dependencies]
rstest = {workspace = true}
bevy = {workspace = true, default-features = true}

[lints]
workspace = true