[package]
name = "bevy_tiles"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy library for working with entities in grids."

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {workspace = true}
bimap = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
bevy = {workspace = true, default-features = true}

[lints]
workspace = true