[package]
name = "bevy_tiles_render"
version = "0.1.0"
edition = "2021"
authors = ["James Bell <jamescarterbell@gmail.com>"]
license = "MIT"
license-file = "LICENSE-MIT"
description = "Bevy library for working with entities in grids."
repository = "https://github.com/OxidizedGames/bevy_bevy_tiles_render"
homepage = "https://github.com/OxidizedGames/bevy_bevy_tiles_render"

[features]
atlas = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { workspace = true, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
] }
bevy_tiles = {path = "../bevy_tiles"}
crossbeam = {workspace = true}
dashmap = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
bevy = {workspace = true, default-features = true}
rand = {workspace = true}

[lints]
workspace = true